--- a/Translations/German/text-mission-change.xml
+++ b/Translations/German/text-mission-change.xml
@@ -24,7 +24,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSION_PLAYER_ALLIANCE</zType>
-		<Translation>link(CONCEPT_ALLIANCE_PLAYER</Translation>
+		<Translation>link(CONCEPT_ALLIANCE_PLAYER)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSION_PLAYER_ALLIANCE_TARGET</zType>
