- The first translated mapElementNames made it back into the game

--- a/Translations/German/text-mapElementNames-change.xml
+++ b/Translations/German/text-mapElementNames-change.xml
@@ -23,11 +23,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_ADRIATIC_SEA</zType>
-		<Translation>Adriatic Sea</Translation>
+		<Translation>Adriatisches Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_AEGEAN_SEA</zType>
-		<Translation>Aegean Sea</Translation>
+		<Translation>Ägäisches Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_AEGINA_ISLAND</zType>
@@ -135,15 +135,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_ARABIAN_DESERT</zType>
-		<Translation>Arabian Desert</Translation>
+		<Translation>Arabische Wüste</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_ARABIAN_SEA</zType>
-		<Translation>Arabian Sea</Translation>
+		<Translation>Arabisches Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_ARAL_SEA</zType>
-		<Translation>Aral Sea</Translation>
+		<Translation>Aralsee</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_ARAXES_RIVER</zType>
@@ -183,7 +183,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_ATLANTIC_OCEAN</zType>
-		<Translation>Atlantic Ocean</Translation>
+		<Translation>Atlantischer Ozean</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_ATLAS_MOUNTAINS</zType>
@@ -215,7 +215,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BABYLONIAN_DESERT</zType>
-		<Translation>Babylonian Desert</Translation>
+		<Translation>Babylonische Wüste</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BAETIS_RIVER</zType>
@@ -231,7 +231,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BALERIC_SEA</zType>
-		<Translation>Baleric Sea</Translation>
+		<Translation>Balearen-Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BALKAN_MOUNTAINS</zType>
@@ -287,7 +287,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BLACK_SEA</zType>
-		<Translation>Black Sea</Translation>
+		<Translation>Schwarzes Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BOEOTIAN_PLAIN</zType>
@@ -339,7 +339,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CANTABRIAN_SEA</zType>
-		<Translation>Cantabrian Sea</Translation>
+		<Translation>Karibisches Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CARPATHIAN_BEECH_FOREST</zType>
@@ -359,7 +359,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CASPIAN_SEA</zType>
-		<Translation>Caspian Sea</Translation>
+		<Translation>Kaspisches Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CATALONIA_WOODLANDS</zType>
@@ -379,7 +379,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CELTIC_SEA</zType>
-		<Translation>Celtic Sea</Translation>
+		<Translation>Keltisches Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CEPHISSOS_RIVER</zType>
@@ -479,7 +479,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_DEAD_SEA</zType>
-		<Translation>Dead Sea</Translation>
+		<Translation>Totes Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_DELIBLATO_SANDS</zType>
@@ -791,7 +791,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_INDIAN_OCEAN</zType>
-		<Translation>Indian Ocean</Translation>
+		<Translation>Indischer Ozean</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_INDUS_RIVER</zType>
@@ -867,7 +867,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_KARPATHIAN_SEA</zType>
-		<Translation>Karpathian Sea</Translation>
+		<Translation>Karpathisches Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_KARST_PLATEAU</zType>
@@ -1091,7 +1091,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_LIBYAN_DESERT</zType>
-		<Translation>Libyan Desert</Translation>
+		<Translation>Lybische Wüste</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_LIBYAN_PLATEAU</zType>
@@ -1203,7 +1203,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEDITERRANEAN_SEA</zType>
-		<Translation>Mediterranean Sea</Translation>
+		<Translation>Mittelmeer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEGARA_GULF</zType>
@@ -1571,7 +1571,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_NUBIAN_DESERT</zType>
-		<Translation>Nubian Desert</Translation>
+		<Translation>Nubische Wüste</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NUR_FOREST</zType>
@@ -1647,7 +1647,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PERSIAN_GULF</zType>
-		<Translation>Persian Gulf</Translation>
+		<Translation>Persicher Golf</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PERSIAN_PLATEAU</zType>
@@ -1747,7 +1747,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_RED_SEA</zType>
-		<Translation>Red Sea</Translation>
+		<Translation>Rotes Meer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RENOS_RIVER</zType>
@@ -1791,7 +1791,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_SAHARA_DESERT</zType>
-		<Translation>Sahara Desert</Translation>
+		<Translation>Sahara</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_SALAMIS_ISLAND</zType>
@@ -1963,7 +1963,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_SYRIAN_DESERT</zType>
-		<Translation>Syrian Desert</Translation>
+		<Translation>Syrische Wüste</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TA_DEHENT</zType>
