--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -1979,7 +1979,7 @@ Jeglicher ungespeicherter Forschritt geht verloren.</Translation>
     </Entry>
     <Entry>
 		<zType>TEXT_SP_SETUP_ADVANCED_TURN_SCALE</zType>
-		<Translation>Zug Moduse</Translation>
+		<Translation>Zug Modus</Translation>
 	</Entry>
 	<Entry>
         <zType>TEXT_SP_SETUP_ADVANCED_EVENTLEVEL</zType>
