- fixed more faulty link(''s

--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -863,7 +863,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_SACRED_TOMB_DESTROY</zType>
-		<Translation><![CDATA[Es wird <masculine_CHARACTER-1>keinen König<feminine>keine Königin<end> außer mich geben. Zerstöre es!]]></Translation>
+		<Translation><![CDATA[Es wird <masculine_CHARACTER-1>keinen König<feminine>keine Königin<end> außer mir geben. Zerstöre es!]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_SACRED_TOMB_STUDY</zType>
