--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -1547,7 +1547,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_NEIGHBORS_HUMBLE_ASSYRIA_ROOT_OPTION_1</zType>
-		<Translation><![CDATA[Schwäre sie niemals zu bezahlen.]]></Translation>
+		<Translation><![CDATA[Schwöre sie niemals zu bezahlen.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_NEIGHBORS_HUMBLE_ASSYRIA_ROOT_OPTION_2</zType>
