- some fixes i stumbled across some gamplay

--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -707,7 +707,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_ELDERLY_COUPLE_HELP</zType>
-		<Translation><![CDATA[Bleibe und helfe ihnen es wieder aufzubauen. Stay and help them reconstruct.]]></Translation>
+		<Translation><![CDATA[Bleibe und helfe ihnen es wieder aufzubauen.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_ELDERLY_COUPLE_ABDUCTED</zType>
@@ -1007,7 +1007,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_PROPHECY_OPTION_0</zType>
-		<Translation>Es ist ein Zeichen das ich auserwhlt wurde.</Translation>
+		<Translation>Es ist ein Zeichen das ich auserwählt wurde.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_PROPHECY_OPTION_1</zType>
