--- a/Translations/German/text-relationship-change.xml
+++ b/Translations/German/text-relationship-change.xml
@@ -119,7 +119,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_VENGEFUL_AGAINST</zType>
-		<Translation>VRachsüchtig gegen</Translation>
+		<Translation>Rachsüchtig gegen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_VENGEFUL_AGAINST_VERB</zType>
