--- a/Translations/German/text-memory-change.xml
+++ b/Translations/German/text-memory-change.xml
@@ -3317,11 +3317,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEMORYRELIGION_ADOPT_RELIGION_OTHER</zType>
-		<Translation>Choose a different link(CONCEPT_STATE_RELIGION)</Translation>
+		<Translation>Wähle eine andere link(CONCEPT_STATE_RELIGION)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEMORYRELIGION_ESTABLISH_THEOLOGY</zType>
-		<Translation>Established a link(CONCEPT_THEOLOGY)</Translation>
+		<Translation>Etablierte eine link(CONCEPT_THEOLOGY)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEMORYRELIGION_SPREAD_RELIGION</zType>
