--- a/Translations/German/text-misc-change.xml
+++ b/Translations/German/text-misc-change.xml
@@ -244,23 +244,23 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROXIMITY_VERY_CLOSE</zType>
-		<Translation>Very Close</Translation>
+		<Translation>Sehr dicht</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROXIMITY_CLOSE</zType>
-		<Translation>Close</Translation>
+		<Translation>Dicht</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROXIMITY_NEAR</zType>
-		<Translation>Near</Translation>
+		<Translation>Nah</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROXIMITY_DISTANT</zType>
-		<Translation>Distant</Translation>
+		<Translation>Fern</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROXIMITY_FAR</zType>
-		<Translation>Far</Translation>
+		<Translation>Weit</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_KNOWLEDGE_PRIMITIVE</zType>
@@ -316,7 +316,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_NEW</zType>
-		<Translation>der Neue</Translation>
+		<Translation>>der Neue</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_FOUNDER</zType>
@@ -727,7 +727,7 @@
 		<Translation>der Wissenschaftler</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_COURTIER_GREAT_SKYEXPLORER</zType>
+		<zType>TEXT_COURTIER_SKYEXPLORER</zType>
 		<Translation>Großer Himmelsgucker</Translation>
 	</Entry>
 	<Entry>
